# statgenGWAS

./: .Rbuildignore  .gitattributes  .gitignore  .gitlab-ci.R  .gitlab-ci.yml  404.html  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  cleanup  configure  configure.ac  configure2.ac  configure3.ac  cran-comments.md  gwas.Rproj  index.html  pkgdown.yml  search.json  sitemap.xml  statgenGWAS.Rproj
R/: EMMA.R  GWASHelp.R  RcppExports.R  annotateSNP.R  chkFuncs.R  codeMarkers.R  codeMarkers2.R  createGData.R  createGWAS.R  data.R  fastGLS.R  geneticMapPlot.R  gwas.R  kinship.R  manhattanPlot.R  qqPlot.R  qtlPlot.R  readPlink.R  readVcf.R  runSingleTraitGwas.R  statgenGWAS.R  sysdata.rda  utils.R  zzz.R
articles/: GWAS.html  index.html
data/: dropsMap.rda  dropsMarkers.rda  dropsPheno.rda  gDataRiceCodedBeagle.rda
data-raw/: 8-Info_Maize_variety.csv  dropsData.R  testData.R
docs/: 404.html  README_old.html  authors.html  index.html  pkgdown.yml
inst/: CITATION
java/: README
man/: EMMA.Rd  annotateSNP.Rd  codeMarkers.Rd  codeMarkers2.Rd  createGWAS.Rd  dfBind.Rd  dropsData.Rd  dropsMap.Rd  dropsMarkers.Rd  dropsPheno.Rd  emmaEigenR.Rd  estVarComp.Rd  estVarCompNR.Rd  exclMarkers.Rd  fastGLS.Rd  gData.Rd  gDataRiceCodedBeagle.Rd  gDataTest.Rd  genCtrlPVals.Rd  getSNPsInRegionSufLD.Rd  gwas.Rd  imputeBeagle.Rd  kinship.Rd  manhattanPlot.Rd  matrixRoot.Rd  plot.GWAS.Rd  plot.gData.Rd  qqPlot.Rd  qtlPlot.Rd  readPLINK.Rd  readVcf.Rd  reduceKinship.Rd  runSingleTraitGwas.Rd  statgenGWAS-package.Rd  statgenGWAS.Rd  (+2 more)
(+74 files in other folders)
